--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,11 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -22,7 +18,5 @@
     "downlevelIteration": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["next-env.d.ts", "src"]
 }
